--- a/e/ea/eas/easyarticlesubmit.com.html
+++ b/e/ea/eas/easyarticlesubmit.com.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the easyarticlesubmit.com privacy policy that was archived on 2008-09-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080913152736id_/http%3A//www.easyarticlesubmit.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the easyarticlesubmit.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612032123id_/http%3A//www.easyarticlesubmit.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Article Submission Directory - Easy Article Submit</title>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<meta name="description" content="Easy Article Submit Articles Submission Directory">
+<meta name="description" content="Easy Article Submit Article Submission Directory">
 <meta name="keywords" content=" submit articles, article directory, article submissions, RSS Article Feeds">
 <meta name="ROBOTS" content="ALL">
 <meta name="Author" content="BJC Computer Services">
 <link rel="Stylesheet" href="http://www.easyarticlesubmit.com/mainstyle.css" type="text/css" media="screen">
+<link type="text/css" rel="stylesheet" href="http://www.easyarticlesubmit.com/uhbt2v27.css">
 </head>
 <body>
 
@@ -17,7 +18,33 @@
 
 <table class="maintable">
 
+<!-- Test Menu -->
 <tbody><tr>
+<td colspan="2">
+
+<div class="bd">
+<div id="ygma" class="mod">
+<div class="bd sprite_bg">
+<div id="ygmatop" class="sprite_bg">
+<div id="ygmatopleft">
+<ul id="ygmanav">
+<li class="sprite_bg delim"><a href="http://www.easyarticlesubmit.com" target="_top">Home</a></li>
+
+   </ul>
+</div>
+
+<div id="ygmauserinfo">
+<span class="sprite_bg delim"><span class="txtbold">New
+User?</span> <a href="http://www.easyarticlesubmit.com/signup.php" title="Register as a User" rel="nofollow">
+Sign Up</a></span><a class="txtbold sprite_bg delim" href="http://www.easyarticlesubmit.com/login.php" title="Login" rel="nofollow">Sign In</a><a id="ygmahelp" href="http://www.easyarticlesubmit.com/learnmore.php" target="_top" title="Learn More!">Learn More...</a></div></div></div></div>
+</div>
+
+</td>
+</tr>
+
+<!-- Test Menu -->
+
+<tr>
 <td colspan="1" align="left"><a href="http://www.easyarticlesubmit.com"><img src="http://www.easyarticlesubmit.com/images/logo3.gif" width="282" height="56" alt="Easy Article Submit Article Directory"></a></td>
 
 <td colspan="1"><p class="articletitle" style="text-align: center; color: #CC0000; font-style: italic">Seek Knowledge...<br>...Find the Light...</p></td>
@@ -26,12 +53,11 @@
 <tr>
 <td class="topnav" align="left" style="height: 25px;">&nbsp;&nbsp;<span style="color: #CC0000; font-style: italic; font-weight: bold; ">Article Submission Directory, Information Resource, RSS Syndication</span></td>
 
-<form id="search" method="post" action="http://www.easyarticlesubmit.com/indexser.php"></form>
 <td class="topnav">
-<p>
-<input type="text" name="search" value="" size="31" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0; "></p>
+<form id="search" style="display:inline;" method="post" action="http://www.easyarticlesubmit.com/indexser.php">
+<input type="text" name="search" value="" size="31" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0; ">
+</form>
 </td>
-
 
 </tr>
 <tr>
@@ -98,6 +124,9 @@ We will let our Visitors and Authorized Customers know about changes to our priv
 © 2007 <b>www.EasyArticleSubmit.com</b>, All rights reserved</p>
 
 
+<!-- Removed to clear article validation errors -->
+<!-- </div> -->
+
 
 </td> <!-- End of Main Content -->
 <td class="navcell"> <!-- Starting of Navigator -->
@@ -106,14 +135,12 @@ We will let our Visitors and Authorized Customers know about changes to our priv
 
 <div class="spacer"></div>
 <div class="rightnavbox">
-<a href="http://www.easyarticlesubmit.com/signup.php">Sign Up</a> for your free account<br>
-</div>
+<p style="text-align: center">
 
-<div class="spacer"></div>
-<div class="rightnavbox" style="text-align: center">
-<br>
-<a href="http://www.articlemarketer.com/5067-0-1-3.html" target="_blank"><img border="0" src="http://www.articlemarketer.com/idevaffiliate/banners/articlemarketerinc-100x100-2.gif" width="100" height="100" alt="Submit Your Articles to Article Marketer"></a>
-<br><br>
+<a href="http://www.tkqlhce.com/te105shqnhp479C98D84658DBE5D" target="_top">
+<img src="http://www.tqlkg.com/s4121tkocig146965A51325A8B2A" alt="125x125 Hosting &amp; Servers at GoDaddy.com" border="0"></a>
+
+</p>
 </div>
 
 <div class="spacer"></div>
@@ -142,24 +169,36 @@ google_ui_features = "rc:6";
 </div>
 
 <div class="spacer"></div>
+<div class="rightnavbox" style="text-align: center">
+<br>
+<!--
+<a href="http://www.articlemarketer.com/5067-0-1-3.html" target="_blank"><img border="0" src="http://www.articlemarketer.com/idevaffiliate/banners/articlemarketerinc-100x100-2.gif" width="100" height="100" alt="Submit Your Articles to Article Marketer"></a>
+-->
+
+<a href="http://www.articlemarketer.com/5067-0-3-6.html" target="_blank" title="Free Article Marketing Resources">Free Article Marketing Resources, Classes, E-Books and Audio.</a>
+
+<br><br>
+</div>
+
+<div class="spacer"></div>
+<div class="rightnavbox" style="text-align: center">
+<br>
+<a href="http://www.easyarticlesubmit.com/article-marketing-handbook.php" target="_blank" title="The Article Marketing Handbook"><img src="/images/ArticleMarketingHandbooks-logo1.jpeg" width="160" height="54" alt="The Article Marketing Handbook"></a><br><br>
+Learn how to get your articles successfully published!<br><br>
+<a href="http://www.easyarticlesubmit.com/article-marketing-handbook.php" target="_blank" title="The Article Marketing Handbook">The Article Marketing Handbook</a>
+</div>
+
+<div class="spacer"></div>
 
 <div class="rightnavbox">
 <a href="http://www.easyarticlesubmit.com/submitarticles.php">Submit Articles</a><br>
-<a href="http://www.easyarticlesubmit.com/login.php">Member Login</a><br>
 <a href="http://www.easyarticlesubmit.com/topauthors.php">Top Authors</a><br>
 <a href="http://www.easyarticlesubmit.com/populararticles.php">Most Popular Articles</a><br>
 <a href="http://www.easyarticlesubmit.com/submitguidelines.php">Submission Guidelines</a><br>
 <a href="http://www.easyarticlesubmit.com/ezinenotify.php">Ezine Notifications</a><br>
 <a href="http://www.easyarticlesubmit.com/rssfeed.php">Article RSS Feeds</a><br>
-<a href="http://www.easyarticlesubmit.com/learnmore.php">Learn more...</a><br>
 </div>
 
-<div class="spacer"></div>
-<div class="rightnavbox">
-<p style="text-align: center">
-<script type="text/javascript" src="http://www.jdoqocy.com/placeholder-2330398?target=_top&amp;mouseover=N"></script>
-</p>
-</div>
 
 <div class="spacer"></div>
 <div class="rightnavbox">
@@ -167,7 +206,7 @@ google_ui_features = "rc:6";
 
 <b>Are you Confused by<br>Duplicate Content Rules?</b><br>
 <a href="http://www.easyarticlesubmit.com/TheDuplicateContentDebate.pdf" title="Duplicate Content Rules">
-<img border="0" src="http://www.easyarticlesubmit.com/images/dupcontentcover.gif" width="180" height="280"></a><br>
+<img border="0" src="/images/dupcontentcover.gif" width="180" height="280"></a><br>
 <b>Download this FREE E-Book and Get Some Answers!</b>
 
 </p>
@@ -182,22 +221,9 @@ google_ui_features = "rc:6";
 <a href="http://www.easyarticlesubmit.com/terms.php">Terms of Service</a><br>
 </div>
 
-<div class="spacer"></div>
-<div class="rightnavbox" style="text-align: center">
-<b>Article Marketing<br>Rules have Changed!</b><br><br>
-<a href="http://www.easyarticlesubmit.com/article-marketing-handbook.php" target="_blank"><img src="/images/article-marketing-handbook.jpg" width="160" height="157" alt="The Article Marketing Handbook"></a><br><br>
-Learn how to get your articles successfully published!<br><br>
-<a href="http://www.easyarticlesubmit.com/article-marketing-handbook.php" target="_blank">The Article Marketing Handbook</a>
-</div>
 
 <div class="spacer"></div>
-<div class="rightnavbox">
-<a href="http://www.bjc-computer-services.com/downloads/increase-traffic-using-article-content.htm" title="Increase Traffic to your web site">Increase Traffic
-to your web site</a><br>Add hundreds, or thousands of FREE, keyword rich articles to your Niche web site!<br><br>
-</div>
-
-<div class="spacer"></div>
-<div class="rightnavbox" style="text-align: center">
+<div class="rightnavbox" style="text-align:left">
 <a title="Article Import Scripts" href="http://www.bjc-computer-services.com/downloads/article-dashboard-import-scripts.htm">Download Article Import Scripts for Article Dashboard</a><br><br>
 </div>
 
@@ -205,8 +231,11 @@ to your web site</a><br>Add hundreds, or thousands of FREE, keyword rich article
 </tr>
 </tbody></table>
 
-<p style="text-align: center; font-family:verdana; font-size: 85%; color: #99CCFF">Copyright 2007 EasyArticleSubmit.com | <a class="footer" href="http://www.bjc-computer-services.com">BJC Computer Services - Web Hosting</a> | <a class="footer" href="http://www.easyarticlesubmit.com/RSS-XML-feeds.html">
-RSS-XML-feeds</a> </p>
+
+<p style="text-align: center; font-family:verdana; font-size: 85%; color: #99CCFF">
+<a class="footer" href="http://www.easyarticlesubmit.com/RSS-XML-feeds.html" title="Free Article RSS-XML Feeds">
+RSS-XML-Feeds</a> |
+Copyright © 2006-2009 EasyArticleSubmit.com | <a class="footer" href="http://www.bjc-computer-services.com" title="Web Design and PHP/MySQL Programming Services">Web Design and PHP/MySQL Programming Services</a> </p>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
