--- a/f/fu/fun/funkruti.com.html
+++ b/f/fu/fun/funkruti.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funkruti.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218150913id_/http%3A//www.funkruti.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funkruti.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612045356id_/http%3A//www.funkruti.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
 	<title>Privacy Policy</title>
@@ -89,6 +89,7 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 <![endif]>
 <![endif]-->
 
+<link href="http://www.funkruti.com/ads/dropboth.css" rel="stylesheet" type="text/css">
 
 
 </head>
@@ -122,7 +123,7 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 		<!--</div>-->
 		
 		<div class="topBlock">
-			
+			<a href="http://www.funkruti.com/"><img src="http://www.funkruti.com/media/images/logo.jpg" class="mainLogo" alt="logo"></a>
 			                <div class="topMemberBlock">
                         <div class="no_hello_actions">
                                 <a href="http://www.funkruti.com/join.php">Join Now</a>
@@ -137,6 +138,9 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 					<table class="topMenu" cellpadding="0" cellspacing="1">
 						<tbody><tr>
 							<td>
+								<a href="http://www.funkruti.com/" showsub="#subMenu_94">Front Page</a>
+							</td>
+							<td>
 								<a href="http://www.funkruti.com/index.php" showsub="#subMenu_5">Home</a>
 							</td>
 							<td>
@@ -149,10 +153,7 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 								<a href="http://www.funkruti.com/photo/all/10/1" showsub="#subMenu_41">Photos</a>
 							</td>
 							<td>
-								<a href="http://videogallery.funkruti.com/" showsub="#subMenu_28">Videos</a>
-							</td>
-							<td>
-								<a href="http://blog.funkruti.com/" target="_blank" showsub="#subMenu_94">Free Downloads</a>
+								<a href="http://www.funkruti.com/browseVideo.php" showsub="#subMenu_28">Videos</a>
 							</td>
 							<td>
 								<a href="http://www.funkruti.com/music/all/10/1" showsub="#subMenu_38">Music</a>
@@ -192,6 +193,10 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 					<a href="http://www.funkruti.com/guestbook.php?owner=0">Guestbook</a>
 					<a href="http://www.funkruti.com/viewFriends.php?iUser=0">Member Friends</a>
 				</div></div>
+				<div class="subMenu" id="subMenu_94" style="display: none">
+					<div class="subMenuOvr">
+					<h2>Front Page</h2>
+				</div></div>
 				<div class="subMenu" id="subMenu_5" style="display: none">
 					<div class="subMenuOvr">
 					<h2>Home</h2>
@@ -223,10 +228,6 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 					<h2>Videos</h2>
 					<a href="http://www.funkruti.com/video/all/10/1">All Videos</a>
 					<a href="http://www.funkruti.com/video/gallery_top">Top Videos</a>
-				</div></div>
-				<div class="subMenu" id="subMenu_94" style="display: none">
-					<div class="subMenuOvr">
-					<h2>Free Downloads</h2>
 				</div></div>
 				<div class="subMenu" id="subMenu_38" style="display: none">
 					<div class="subMenuOvr">
@@ -286,41 +287,45 @@ aRayApps["video"]["admin"] = {"params": new Array('nick', 'password'), "top": 0,
 		<div class="boxContent">
 			<div class="clear_both"></div>
 				<!-- Design Box [ Start ] here  -->
-	Privacy Policy
+	<p>Privacy Policy</p>
 
-FunKruti.com Privacy Policy
-This statement covers the site www.FunKruti.com (FunKruti.com). Please read this statement carefully before using proceeding to access FunKruti.com. Your use of FunKruti.com indicates your agreement to abide by the Terms in effect.
+<p>FunKruti.com Privacy Policy</p>
+<p>This statement covers the site www.FunKruti.com (FunKruti.com). Please read this statement carefully before using proceeding to access FunKruti.com. Your use of FunKruti.com indicates your agreement to abide by the Terms in effect.</p>
 
-Information Collection
+<br>
+<p>Google Adsense Policy</p>
+<p><a href="http://www.doubleclick.com/privacy/faq.aspx">DoubleClick DART cookie</a>: </p><ul><li>Google, as a third party vendor, uses cookies to serve ads on our site. </li><li>Google's use of the DART cookie enables it to serve ads to our users based on their visit to our sites and other sites on the Internet. </li><li>Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.com/privacy_ads.html">Google ad and content network privacy policy</a>. </li></ul><p></p>
+
+Information Collection<p></p>
 FunKruti.com is the sole owner of the information collected on www.FunKruti.com. FunKruti.com may collect information from our users at several different points on our Web site.
 
-Comments
-In order to enhance their use of this Web site, users can choose to leave comments on particular articles of interest. To leave a comment, users must submit information including a valid email address. FunKruti.com uses this information to screen out users who leave comments prohibited by our terms and conditions of use, and will not pass this information to any other organization.
+<p>Comments</p>
+<p>In order to enhance their use of this Web site, users can choose to leave comments on particular articles of interest. To leave a comment, users must submit information including a valid email address. FunKruti.com uses this information to screen out users who leave comments prohibited by our terms and conditions of use, and will not pass this information to any other organization.</p>
 
-Third Party Cookies
-Some of our business partners may use cookies on our site (for example, advertisers). However, FunKruti.com has no access to or control over these cookies, once we have given permission for them to set cookies for advertising. This privacy statement covers the use of cookies by FunKruti.com only and does not cover the use of cookies by any advertisers.
+<p>Third Party Cookies</p>
+<p>Some of our business partners may use cookies on our site (for example, advertisers). However, FunKruti.com has no access to or control over these cookies, once we have given permission for them to set cookies for advertising. This privacy statement covers the use of cookies by FunKruti.com only and does not cover the use of cookies by any advertisers.</p>
 
-Third Party Advertising
-The advertisements appearing on FunKruti.com are delivered to users by Google, among other services. Information about users’ visit to this site, such as number of times they have viewed an ad (but not username, date of birth, or any other personal information), is used to serve ads to users on this site.
+<p>Third Party Advertising</p>
+<p>The advertisements appearing on FunKruti.com are delivered to users by Google, among other services. Information about users’ visit to this site, such as number of times they have viewed an ad (but not username, date of birth, or any other personal information), is used to serve ads to users on this site.</p>
 
-Log Files
-Like most standard Website servers we use log files. This includes internet protocol (IP) addresses, browser type, internet service provider (ISP), referring/exit pages, platform type, date/time stamp, and number of clicks to analyze trends, administer the site, track user’s movement in the aggregate, and gather broad demographic information for aggregate use. IP addresses, etc. are not linked to personally identifiable information. We may use a tracking utility that uses log files to analyze user movement.
+<p>Log Files</p>
+<p>Like most standard Website servers we use log files. This includes internet protocol (IP) addresses, browser type, internet service provider (ISP), referring/exit pages, platform type, date/time stamp, and number of clicks to analyze trends, administer the site, track user’s movement in the aggregate, and gather broad demographic information for aggregate use. IP addresses, etc. are not linked to personally identifiable information. We may use a tracking utility that uses log files to analyze user movement.</p>
 
-Legal Disclaimer
-Though we make every effort to preserve user privacy, FunKruti.com may need to disclose personal information when required by law wherein we have a good-faith belief that such action is necessary to comply with a current judicial proceeding, a court order or legal process served on our Website.
-Read Complete Disclaimer Here
+<p>Legal Disclaimer</p>
+<p>Though we make every effort to preserve user privacy, FunKruti.com may need to disclose personal information when required by law wherein we have a good-faith belief that such action is necessary to comply with a current judicial proceeding, a court order or legal process served on our Website.</p>
+<p>Read Complete Disclaimer Here</p>
 
-Business Transistions
-In the event FunKruti.com goes through a business transition, such as a merger, acquisition by another company, or sale of a portion of its assets, users’ personal information will, in most instances, be part of the assets transferred.
+<p>Business Transistions</p>
+<p>In the event FunKruti.com goes through a business transition, such as a merger, acquisition by another company, or sale of a portion of its assets, users’ personal information will, in most instances, be part of the assets transferred.</p>
 
-Links
-FunKruti.com contains links to other sites. Please be aware that we, FunKruti.com, are not responsible for the privacy practices of such other sites. We encourage our users to be aware when they leave our site and to read the privacy statements of each and every Website that collects personally identifiable information. This privacy statement applies solely to information collected by FunKruti.com.
+<p>Links</p>
+<p>FunKruti.com contains links to other sites. Please be aware that we, FunKruti.com, are not responsible for the privacy practices of such other sites. We encourage our users to be aware when they leave our site and to read the privacy statements of each and every Website that collects personally identifiable information. This privacy statement applies solely to information collected by FunKruti.com.</p>
 
-Notification of Changes
-Whenever FunKruti.com changes our privacy policy, we will post those changes to this privacy statement, and other places we deem appropriate so our users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it.
+<p>Notification of Changes</p>
+<p>Whenever FunKruti.com changes our privacy policy, we will post those changes to this privacy statement, and other places we deem appropriate so our users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it.</p>
 
-Contact Information
-If you have any questions or suggestions regarding our privacy policy, please contact us at Info@FunKruti.com.
+<p>Contact Information</p>
+<p>If you have any questions or suggestions regarding our privacy policy, please contact us at Info@FunKruti.com.</p>
 <!-- Design Box [ End ] here  -->
 
 			<div class="clear_both"></div>
@@ -387,7 +392,7 @@ If you have any questions or suggestions regarding our privacy policy, please co
 												<a href="http://www.funkruti.com/tellfriend.php" class="bottommenu" onclick="return launchTellFriend();">Invite a friend</a>
 												<a href="http://www.funkruti.com/#" class="bottommenu" onclick="addBookmark(); return false;">Bookmark</a>
 			</div>
-			<div class="bottomCpr">Copyright © 2008 FunKruti.<!-- 6 21 1 34 4 --></div>
+			<div class="bottomCpr">Copyright © 2009 FunKruti.<!-- 6 8 1 76 4 --></div>
 		</div>
 	</div>
 
