--- a/v/va/vac/vacationrentals.com.html
+++ b/v/va/vac/vacationrentals.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the vacationrentals.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216171758id_/http%3A//www.vacationrentals.com/vr/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vacationrentals.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612065309id_/http%3A//www.vacationrentals.com/vr/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
       <title>
       VacationRentals.com Privacy Policy
       </title>
       <meta name="description" content="Vacation Rentals Privacy Policy, easy to find, contact owners direct, 1000’s of homes listed by owners in Florida, Hawaii, Europe, California, Beach homes, Ski Villas and other unique lodgings and locations">
       <meta name="keywords" content="Vacation Rentals, European, Hawaii, Florida, homes, villas, cottages, condos, lodging, by owner, online, cabin, island, travel, beach house, ski cabin, holiday, accommodations, bed and breakfast, snow, apartment, apple, package">
-  <link rel="stylesheet" type="text/css" href="/resources/css/vrfresh/consolidated-base.css">
-  <script type="text/javascript" src="/resources/js/vrfresh/jquery.js">
-  </script>
+		<link rel="stylesheet" type="text/css" href="/resources/css/vrfresh/consolidated-base-min.css">
+		<script type="text/javascript" src="/resources/js/vrfresh/jquery-1.3.1.min.js"></script>
 <meta name="decorator" content="vrfresh">
 </head>
 <body id="body" class="orange">
@@ -20,10 +20,10 @@
     <a href="/">VacationRentals.com</a>
   </div>
          <span class="slogan">
-          Over <strong>34,000</strong> family-friendly beach houses, condo rentals and vacation home rentals
+          Over <strong>35,000</strong> family-friendly beach houses, condo rentals and vacation home rentals
         </span>
   <ul class="globalnav">
-    <li class="active">
+    <li>
       <a href="/" class="orange">
       <span>
       home
@@ -38,6 +38,13 @@
       </a>
     </li>
     <li>
+      <a href="/deals.htm" class="red">
+      <span>
+      deals
+      </span>
+      </a>
+    </li>
+    <li>
       <a href="/travel-resources/resources.htm" class="purple">
       <span>
       travel resources
@@ -47,7 +54,7 @@
     <li>
       <a href="/vr/start.htm" class="blue">
       <span>
-      owners
+      advertise with us
       </span>
       </a>
     </li>
@@ -144,23 +151,14 @@
 </ul>
 <p>Use of this website constitutes acceptance of the VacationRentals.com Terms and Conditions and Privacy Policy.</p>
 <p>©2000-2008, VacationRentals.com, Inc. All Rights Reserved.</p>
-			    <div id="addthis">
-			        <script type="text/javascript">
-			        	addthis_pub  = 'vrcorporate';
-			        </script>
-			        <a nofollow="nofollow" href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()">
-			        	<img src="http://s9.addthis.com/button1-bm.gif" width="125" height="16" border="0" alt="">
-			        </a>
-			        <script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
-			    </div>
 </div>
 <!-- Begin Common FOOTER Tags -->
     <!-- SiteCatalyst code version: H.17. Copyright 1997-2008 Omniture, Inc. More info available at http://www.omniture.com -->
-        <script language="JavaScript" type="text/javascript" src="/resources/js/tracking/s_code_VR_prod.js"></script>
+                <script language="JavaScript" type="text/javascript" src="/resources/js/tracking/s_code_VR_prod.js"></script>
         <script language="JavaScript" type="text/javascript"><!--
-    	// var eVar3 = String(__listingid);
-    	// var cevt = String(conversionEvent);
-    	s.pageName="marketing_privacypolicy";
+        // var eVar3 = String(__listingid);
+        // var cevt = String(conversionEvent);
+        s.pageName="marketing_privacypolicy";
         s.server="";
         s.channel="marketing";
         s.pageType="";
@@ -169,31 +167,37 @@
         s.prop3="";
         s.prop4="";
         s.prop5="";
+        s.prop12="";
+        s.prop14="";
         s.prop15="traveler";
         s.prop16="traveler";
-        s.prop24="VR:3927";
+        s.prop20="";
+        s.prop24="VR:5588";
+        s.prop25="";
+        s.prop31="";
+        s.purchaseID="";
         /* Conversion Variables */
         s.campaign="";
         s.state="";
         s.zip="";
         s.events="";
         s.products="";
-        s.purchaseID="";
         s.eVar1="";
         s.eVar2="";
         s.eVar3="";
         s.eVar4="";
         s.eVar5="";
+        s.eVar19="";
+        s.eVar21="";
+        s.eVar24="";
         s.eVar30="";
+        s.eVar31="";
+        s.eVar36="";
         /* Hierarchy Variables */
         s.hier1="";
         /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
         var s_code=s.t();if(s_code)document.write(s_code)//--></script>
     <!-- End SiteCatalyst code version: H.17. -->
-	<script type="text/javascript">
-		var taghost = (("https:" == document.location.protocol) ? "https://js.revsci.net" : "http://js.revsci.net");
-		document.write(unescape("%3Cscript src='" + taghost + "/gateway/gw.js?csid=G07610&bpid=S0219' type='text/javascript'%3E%3C/script%3E"));
-	</script><script src="https://js.revsci.net/gateway/gw.js?csid=G07610&amp;bpid=S0219" type="text/javascript"></script>
 	<!-- Analytics Code for VR -->
 	<script type="text/javascript">
 		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -206,29 +210,9 @@
 		pageTracker._trackPageview();
 	</script>
 	<!-- End Analytics Code -->
-	<script type="text/javascript">
-		if (document.location.protocol != "https:") {
-    		document.write("<scr"+"ipt src='http://afe.specificclick.net?l=125246788&sz=1x1&wr=j&t=j&rnd=[cachebuster]&u="+escape(document.location)+"&r="+escape(document.referrer)+"'></scri"+"pt>");
-		}
-	</script>
-	<script type="text/javascript">
-		var tcdacmd="dt";
-		var taghost = "http://an.tacoda.net";
-		var tagscript = "slf.js";
-		if ("https:" == document.location.protocol) {
-			taghost = "https://an.secure.tacoda.net";
-			tagscript = "slf_ssl.js";
-		}
-		document.write(unescape("%3Cscript src='"+taghost+"/an/16629/"+tagscript+"' type='text/javascript'%3E%3C/script%3E"));
-	</script><script src="https://an.secure.tacoda.net/an/16629/slf_ssl.js" type="text/javascript"></script>
  	<script type="text/javascript">
 		if (document.location.protocol != "https:") {
 			document.write('<img src="http://secure-us.imrworldwide.com/cgi-bin/m?ci=us-vacationrentals&cg=0&cc=1" />');
-		}
-	</script>
- 	<script type="text/javascript">
-		if (document.location.protocol != "https:") {
-			document.write('<img src="http://b.collective-media.net/seg/cm/ha_vacationrentals" width="1" height="1" />');
 		}
 	</script>
 <!-- End Common FOOTER Tags -->
