--- a/f/fl/fli/flirt.com.html
+++ b/f/fl/fli/flirt.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flirt.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217060940id_/http%3A//www.flirt.com/help/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flirt.com privacy policy that was archived on 2009-06-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090613035844id_/http%3A//flirt.com/help/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Flirt.com - Online Dating for Cool People</title>
@@ -22,17 +22,16 @@
 <meta name="expires" content="never">
 <meta http-equiv="imagetoolbar" content="no">
 
-<script type="text/javascript" src="/dyncontent1228822447/js/r/pbedcsirugxolt.js"></script>
-
+<script type="text/javascript" src="/dyncontent1243338316/js/r/pbedcsirugxolt.js"></script>
 
 <link rel="alternate" type="application/rss+xml" title="Flirt.com New Photos " href="/rss/images.php">
 <link rel="alternate" type="application/rss+xml" title="Flirt.com New Female Members " href="/rss/females.php">
 <link rel="alternate" type="application/rss+xml" title="Flirt.com New Male Members " href="/rss/males.php">
 <link rel="alternate" type="application/rss+xml" title="Flirt.com Favorite Media " href="/rss/media.php">
 <link rel="alternate" type="application/rss+xml" title="Flirt.com New Blog Entries " href="/rss/postings.php">
-<link rel="stylesheet" type="text/css" href="/dyncontent1228822447/css/r/flirtcom/m-m.css">
-<!--[if IE]><link rel="stylesheet" type="text/css" href="/dyncontent1228822447/css/r/flirtcom/ie_general_fixes.css"><![endif]-->
-<!--[if lt IE 7]><link rel="stylesheet" type="text/css" href="/dyncontent1228822447/css/r/flirtcom/ie_png_fixes.css"><![endif]-->
+<link rel="stylesheet" type="text/css" href="/dyncontent1243338316/css/r/flirtcom/m-m.css">
+<!--[if IE]><link rel="stylesheet" type="text/css" href="/dyncontent1243338316/css/r/flirtcom/ie_general_fixes.css"><![endif]-->
+<!--[if lt IE 7]><link rel="stylesheet" type="text/css" href="/dyncontent1243338316/css/r/flirtcom/ie_png_fixes.css"><![endif]-->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
@@ -153,8 +152,8 @@ Please read the information below under the heading "Special Cases in which we S
    if (document.context) document.write ("&context=" + escape(document.context));
    if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
    document.write ("'><\/scr"+"ipt>");
-//]]>--></script><script type="text/javascript" src="https://d1.openx.org/ajs.php?zoneid=6468&amp;target=_blank&amp;cb=43520203433&amp;charset=windows-1252&amp;loc=https%3A//web.archive.org/web/20081217060940id_/http%253A//www.flirt.com/help/privacy.php"></script>
-<noscript><a href='http://d1.openx.org/ck.php?n=aeed656b&amp;cb=1156753922' target='_blank'><img src='http://d1.openx.org/avw.php?zoneid=6468&amp;cb=1156753922&amp;n=aeed656b' border='0' alt='' /></a></noscript>
+//]]>--></script><script type="text/javascript" src="https://d1.openx.org/ajs.php?zoneid=6468&amp;target=_blank&amp;cb=6177141400&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20090613035844id_/http%253A//flirt.com/help/privacy.php"></script>
+<noscript><a href='http://d1.openx.org/ck.php?n=aeed656b&amp;cb=364780663' target='_blank'><img src='http://d1.openx.org/avw.php?zoneid=6468&amp;cb=364780663&amp;n=aeed656b' border='0' alt='' /></a></noscript>
 </div></div>
         <div class="clear"></div>
       </div>
@@ -178,13 +177,16 @@ Please read the information below under the heading "Special Cases in which we S
       <li><a href="/" title="Home">Home</a></li>
       <li class="clear">&nbsp;</li>
     </ul>
-    <div id="powered-by-icony"><a href="http://www.icony.de" title="powered by ICONY"><span>powered by ICONY</span></a></div>
+    <div id="powered-by-icony"><a href="http://www.flirt.de" title="Flirt-Partner"><span>Flirt-Partner</span></a></div>
   </div>
   </div>
 <div style="width:1056px; height:24px;">
   <img src="/images/flirtcom/layout/footer_lines.gif" class="footer-lines">
 </div><!-- zaehlpixel -->
 </div>
+<!-- Woopra Code Start -->
+<script type="text/javascript"> var _wh = ((document.location.protocol=='https:') ? "https://sec1.woopra.com" : "http://static.woopra.com"); document.write(unescape("%3Cscript src='" + _wh + "/js/woopra.js' type='text/javascript'%3E%3C/script%3E")); </script><script src="https://sec1.woopra.com/js/woopra.js" type="text/javascript"></script>
+<!-- Woopra Code End -->
 <div id="popup-box-template" class="template-box-1 sortable-box hidden box-layout-1 popup-box">
   <div class="box-heading move_handle" style="position:relative;">
     <div class="close_button" onclick="myUserModules.closeBox('popup-box-template');"><span>X</span></div>
